# hackernews

./: Cargo.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
hackernews/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
hackernews/htmls/: comment.html  index.html  main.html  send.html  story_item.html
hackernews/src/: lib.rs  main.rs
hackernews/src/ui/: comments.rs  mod.rs  stories.rs  story_comment.rs  story_item.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
