[package]
name = "hn"
version = "0.1.0"
description = "A Hacher news Tauri App"
authors = ["hedonwang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hackernews_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
dirs = "5.0.1"
tracing = { version = "0.1.40", features = ["log"] }

# tauri
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-log = {version = "2.0.0-rc.2", features = ["colored"] }
tauri-plugin-clipboard-manager = "2.0.0-rc.2"
tauri-plugin-window-state = "2.0.0-rc.2"
